[package]
name = "named-array"
version = "0.1.0"
edition = "2021"
authors = ["Sagan Sutherland <sagan@farthinghalearms.com>"]
keywords = ["proc-macro"]
repository = "https://github.com/smsutherland/named-array"
description = "A procedural macro for accessing struct fields as an array."
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.36"

[dependencies.syn]
version = "2.0.66"
default-features = false
features = ["full", "parsing", "proc-macro", "printing", "extra-traits"]
